objects/Audit_Trail__c.object
<CustomObject>
    <fields>
        <fullName>Created_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Created By</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>user Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Action__c</columns>
        <columns>user_Name__c</columns>
        <columns>User_Id__c</columns>
        <columns>Created_By__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Display__c</columns>
        <columns>Section__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>